tests/whiley/valid/test_412.wyal
type nat is (int x)
where:
    x >= 0


type neg is (!nat self)


assert "type invariant not satisfied":
    if:
        true
    then:
        -1 is neg


