tests/whiley/invalid/test_121.wyal
type scf2nat is (int x)
where:
    x >= 0


assert "type invariant not satisfied":
    if:
        true
    then:
        -1 is scf2nat


